<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/dog"
                android:tag="@string/dog"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_dog"
                android:onClick="startAgePrompt"
                />
            <ImageView
                android:id="@+id/cat"
                android:tag="@string/cat"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_cat"
                android:onClick="startAgePrompt"
                />
            <ImageView
                android:id="@+id/fish"
                android:tag="@string/fish"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_fish"
                android:onClick="startAgePrompt"
                />
        </TableRow>
        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/chicken"
                android:tag="@string/chicken"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_chicken"
                android:onClick="startAgePrompt"
                />
            <ImageView
                android:id="@+id/panda"
                android:tag="@string/panda"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_panda"
                android:onClick="startAgePrompt"
                />
            <ImageView
                android:id="@+id/cow"
                android:tag="@string/cow"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_cow"
                android:onClick="startAgePrompt"
                />
        </TableRow>
        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/rabbit"
                android:tag="@string/rabbit"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_rabbit"
                android:onClick="startAgePrompt"
                />
            <ImageView
                android:id="@+id/elephant"
                android:tag="@string/elephant"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_elephant"
                android:onClick="startAgePrompt"
                />
            <ImageView
                android:id="@+id/human"
                android:tag="@string/human"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_girl"
                android:onClick="startAgePrompt"
                />
        </TableRow>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>